chore() prep for test fest - somes fixes